<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Scuola Wizard - Registro Scolastico Android v0.9-alpha</string>
    <string name="action_settings">Settings</string>
    <color name="colorBlue">#0000ff</color>
    <color name="colorRed">#ff0000</color>
    <color name="colorStart">#008080</color>
    <color name="colorOrange">#f4a50c</color>
    <color name="colorCyan">#1eecf4</color>
    <color name="colorGrey">#c3d3d3</color>
    <color name="colorBlack">#000000</color>
    <color name="colorNavy">#000084</color>
    <color name="colorListItem">#d1cab0</color>
    <string name="ibBackDescription">Torna al Menu</string>
    <string name="scuolaWizardTitle">Scuola Wizard</string>
    <string name="userName">UserName</string>
    <string name="hashValue">hash</string>
    <string name="sIdScuola">Id</string>
    <string name="sScuolaAcronimo">Acronim</string>
    <string name="sNomeScuola">Scuola</string>
    <string name="iconDescription">Immagine relativa a pagina wizard</string>
    <string name="updateText">Update</string>
    <string name="deleteText">Delete</string>
    <string name="createText">Create</string>
    <string name="clearText">Clear</string>
    <string name="selectText">Select</string>
    <string name="commitText">Commit</string>
    <string name="rollbackText">Rollback</string>
    <string name="scuoleTable">Tabella Scuole</string>
    <string name="tipoScuolaHint">Tipo Scuola (acronimo)</string>
    <string name="nomeScuolaHint">Nome Scuola</string>
    <string name="idScuolaHint">Id</string>
    <string name="indirizzoHint">Indirizzo</string>
    <string name="capHint">cap</string>
    <string name="cittaHint">Città</string>
    <string name="provinciaHint">Pr</string>
    <string name="telefonoHint">Telefono</string>
    <string name="faxHint">Fax</string>
    <string name="emailHint">Email</string>
    <string name="webHint">Web</string>
    <string name="rowCounter">(0)</string>
    <string name="idAsHint">Id A.S.</string>
    <string name="annoScolasticoHint">####/####</string>
    <string name="scuolaASHint">Scuola</string>
    <string name="endDateHint">Data Fine A.S.</string>
    <string name="startDateHint">Data Inizio A.S.</string>
    <string name="cancelButtonText">Esci</string>
    <string name="saveButtonText">Applica</string>
    <string name="cambiaText">Cambia</string>
    <string name="crudMessage">Operazione in corso</string>
    <string name="idScuola">Id Scuola</string>
    <string name="idPeriodoHint">Id Per.</string>
    <string name="scuolaFKHint">Scuola</string>
    <string name="asFkHint">A.S.</string>
    <string name="periodoStringHint">PERIODO</string>
    <string name="startPeriodHint">Inizio Periodo</string>
    <string name="endPeriodHint">Fine Periodo</string>
    <string name="idPeriodoText">Id Per.</string>
    <string name="periodoHint">PERIODO</string>
    <string name="timeSessionDescription">Periodo Scolastico</string>
    <string name="progressBarText">0.0%</string>
    <string name="durataASHint">Durata A.S.</string>
    <string name="idParamOrarioAsHint">IdP</string>
    <string name="scuolaParamOrario">Scuola</string>
    <string name="asParamOrarioHint">A.S.</string>
    <string name="inizioLezioniHint">Inizio Lez.</string>
    <string name="durataOraHint">Ore [min.]</string>
    <string name="durataIntervalloHint">Intervallo [min.]</string>
    <string name="isClasseHint">Id Cl.</string>
    <string name="nomeClassHint">Nome Classe</string>
    <string name="specializzazioneHint">Specializzazione</string>
    <string name="classeHint">Classe</string>
    <string name="classeDescription">classeImage</string>
    <string name="idClasseHint">Id Cl.</string>
    <string name="idStudenteHint">Id St.</string>
    <string name="cognomeHint">Cognome</string>
    <string name="nomeHint">Nome</string>
    <string name="dataEntrataHint">Data Entrata</string>
    <string name="ritiratoDataHint">Data Ritiro</string>
    <string name="cbAttivoText">Attivo</string>
    <string name="ivStudentDescription">Studente</string>

</resources>