<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ivStudentDescription"
        android:padding="2dp"
        android:src="@drawable/student48" />

    <TextView
        android:id="@+id/tvIdStudente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:padding="5dp"
        android:text="@string/idStudenteHint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvCognomeStudente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:lines="1"
        android:minLines="1"
        android:padding="5dp"
        android:text="@string/cognomeHint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvNomeStudente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:lines="1"
        android:minLines="1"
        android:padding="5dp"
        android:text="@string/nomeHint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>